unintended consequences reworked

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4259,6 +4259,24 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.97.t:0 "Fall of Baghdad"
  ottoman.97.d:0 "Despite of our best efforts, we've failed to hold Baghdad."
  ottoman.97.a:0 "A minor step back..."
+ ottoman.98.t:0 "Unintended Consequences"
+ ottoman.98.d:0 "Due to the recent attempt to hinder their influence, Christians started to lose their economical hegemony over the region. This resulted in the weakening of centuries old trade infrastructures and markets, and even caused unemployment."
+ ottoman.98.a:0 "So far with national economy."
+ ottoman.99.t:0 "Unintended Consequences"
+ ottoman.99.d:0 "Due to the recent attempt to hinder their influence, Christians started to lose their economical hegemony over the region. This resulted in the weakening of centuries old trade infrastructures and markets, and even caused unemployment."
+ ottoman.99.a:0 "So far with national economy."
+ ottoman.100.t:0 "Unintended Consequences"
+ ottoman.100.d:0 "Our recent policies in some regions have proven to be quite unpopular. As a result, previously loyal and quite closely affiliated states within our empire have started to openly defy our rule. As a consequence, we'll have to govern the region no different from a foreign occupied state."
+ ottoman.100.a:0 "They'll learn to be a part of our empire soon enough."
+ ottoman.101.t:0 "Unintended Consequences"
+ ottoman.101.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.101.a:0 "Human nature at its best."
+ ottoman.102.t:0 "Unintended Consequences"
+ ottoman.102.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.102.a:0 "Human nature at its best."
+ ottoman.103.t:0 "Unintended Consequences"
+ ottoman.103.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.103.a:0 "Human nature at its best."
 
  Getkamilpashadiedelectios2rizanur:0 "With Hürriyet ve İtilaf victory in the eletions, the party must choose a leader to rule over the empire. Our first choice is Rıza Paşa, a prominent name rose to power as the most prominent opposition to Al Qahtaniya stands as a strong figure. Our last candidate is Prens Sabahattin, a staunch supporter of decentralization. All are prominent candidates, but the public shall choose only one."
  ottoman.98.a:0 "Mehmed Kamil Paşa wins."
@@ -4325,7 +4343,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  TUR_ottoman_assyrian_minority_modify_attrition_negative_15:0 "Modify §YAssyrian Minority§! as: Division Attrition: §R+15.00%§!"
  ottoman.111.t:0 "Unintended Consequences"
  ottoman.111.d:0 "Due to the recent attempt to hinder their influence, Christians started to lose their economical hegemony over the region. This resulted in the weakening of centuries old trade infrastructures and markets, and even caused unemployment."
- ottoman.111.a:0 "Liberation from Greek economical hegemony, right?"
+ ottoman.111.a:0 "So far with national economy."
  ottoman.112.t:0 "Unintended Consequences"
  ottoman.112.d:0 "After confiscating all of the Christian properties in Anatolia, the centuries old trade infrastructure built by the Greeks inevitably fell with it. We no longer can benefit from the Christian trade in the region."
  ottoman.112.a:0 "At least we got what they had."
