--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4914,7 +4914,7 @@
  TUR_central_governance_in_arabia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n\n"
  TUR_central_administration_in_syria:0 "Central Administration in Syria"
  TUR_central_administration_in_syria_desc:0 "Syria as a region has included some of the most important vilayets and cities for our empire, both in terms of tax revenue and legitimacy. While the importance of these vilayets has been unquestionable, there is still quite a road ahead for the region to be fully centralized."
- TUR_central_administration_in_syria_tt:0 "Unlocks §YIntegrate Syrian Vilayets§! Decisions\nUnlocks §YPro-Ottoman Propaganda for Shia's§! Decisions"
+ TUR_central_administration_in_syria_tt:0 "Unlocks §YPro-Ottoman Propaganda for Shia's§! Decisions"
  TUR_entrench_rule_in_mesapotamia:0 "Entrench Rule in Mesapotamia"
  TUR_entrench_rule_in_mesapotamia_desc:0 "Mesapotamia has enjoyed some degree of autonomy after its incorporation into our empire. Yet the gradual centralization of our empire has started to integrate the region as regular vilayets, just like any other internal administrative division within our empire. As the integration process continues in our empire, so will our rule entrench in the region."
  TUR_entrench_rule_in_mesapotamia_tt:0 "Unlocks §YPro-Ottoman Propaganda for Shia's§! Decisions"
