--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4277,37 +4277,15 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.103.t:0 "Unintended Consequences"
  ottoman.103.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.103.a:0 "Human nature at its best."
-
- Getkamilpashadiedelectios2rizanur:0 "With Hürriyet ve İtilaf victory in the eletions, the party must choose a leader to rule over the empire. Our first choice is Rıza Paşa, a prominent name rose to power as the most prominent opposition to Al Qahtaniya stands as a strong figure. Our last candidate is Prens Sabahattin, a staunch supporter of decentralization. All are prominent candidates, but the public shall choose only one."
- ottoman.98.a:0 "Mehmed Kamil Paşa wins."
- ottoman.98.b:0 "Prens Sabahattin wins."
- ottoman.98.c:0 "Damat Ferid Paşa wins."
- ottoman.98.e:0 "İsmail Kemal wins."
- ottoman.98.f:0 "Rıza Paşa wins."
- ottoman.99.t:0 "Elections within the Socialist Coalition"
- ottoman.99.d:0 "After the formation of İttihat ve Terakki Fırkası and Osmanlı Sosyalist Fırkası coalition, many in our government has called for an election to choose a candidate from one of the parties. While İttihat ve Terakki's socialist wing is in the minority, their coalition with Osmanlı Sosyalist Fırkası kept them in power. This is due to the majority of the leftist support poured in from the party. For this reason, Osmanlı Sosyalist Fırkası in the party are asking for greater representation. Yet the İttihat ve Terakki fırkası has greater control over the empire. No matter which party wins, the coalition is likely to continue for the good of both parties."
- ottoman.99.a:0 "Ali İhsan Bey Bey wins."
- ottoman.99.b:0 "Hüseyin Hilmi wins."
- ottoman.99.c:0 "Edhem Bey wins."
- ottoman.99.e:0 "Refik Nevzat Bey wins."
- ottoman.100.t:0 "Hellenoturkist Propaganda Successful in State"
- ottoman.100.d:0 "Our attempts to promote Hellenoturkism and integrating Greek community in the region has been a success."
- ottoman.100.a:0 "Our propaganda has started to bear its fruits"
- ottoman.101.t:0 "Hellenoturkist Propaganda Unsuccessful in State"
- ottoman.101.d:0 "Our attempts to promote Hellenoturkism and integrating Greek community in the region has failed."
- ottoman.101.a:0 "We should try again"
- ottoman.102.t:0 "Unintended Consequences"
- ottoman.102.d:0 "As we tried to use the violence between minorities in Macedonia, it came to bite us in the ass. Minorities became relentless and widespread violence quickly became a norm."
- ottoman.102.a:0 "We should crush them in no time"
- TUR_ottoman_greek_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: Resistance Target: §R+15%§!"
- TUR_ottoman_south_slavic_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Resistance Target: §R+15%§!"
- ottoman.103.t:0 "Unintended Consequences"
- ottoman.103.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
- ottoman.103.a:0 "We must turn a blind eye."
  ottoman.104.t:0 "Unintended Consequences"
- ottoman.104.d:0 "Egyptian officials, elite and even the people itself has started to actively oppose our attempts of integrating Egypt. Luckly to us, this opposition wont last forever; but while it does, it will hurt."
- ottoman.104.a:0 "We should've seen that coming."
- TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_50:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §R+5%§!\nResistance Growth Speed: §R+50%§!"
+ ottoman.104.d:0 "As we've passed Temporary Law on Deportation, many Armenians within our empire has actively started resistance for their well being. As we were looking for a justification to defend our atrocities, this will be the perfect cover for our actions. As if we ever need to deny our actions in the future, we'll simply say "it never happened, but they deserved it."
+ ottoman.104.a:0 "Now they definitely deserved it."
+ ottoman.104.tt1:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+5.0%§!\n"
+ ottoman.104.tt2:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
+ ottoman.104.tt3:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+15.0%§!\n"
+ ottoman.104.tt4:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
+ ottoman.104.tt5:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+25.0%§!\n"
+
  ottoman.105.t:0 "Ottoman-Russian Subjugation"
  ottoman.105.d:0 "The Ottomans and Russians has been enemies for centuries. But recently, in an effort to join the French faction, [TUR.GetName] has agreed with the Russians to become their subjects. With this agreement, Ottomans became a member of [FRA.GetFactionName] and Russians got access to the Mediterranean."
  ottoman.105.a:0 "This was necessary for the survival of our nation."
