--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2316,6 +2316,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_resistance_target_2:0 "£political_violence_texticon  Resistance Target: §G+2%§!\n"
  TUR_minority_resistance_target_1:0 "£political_violence_texticon  Resistance Target: §G+1%§!\n"
 
+ TUR_minority_attrition_down:0 "[TUR_minority_attrition_down]"
+ TUR_minority_army_defence_factor_normal:0 "£attrition_texticon  Division Attrition: §G-5.0%§!\n"
+ TUR_minority_army_defence_factor_4:0 "£attrition_texticon  Division Attrition: §G-4.0%§!\n"
+ TUR_minority_army_defence_factor_3:0 "£attrition_texticon  Division Attrition: §G-3.0%§!\n"
+ TUR_minority_army_defence_factor_2:0 "£attrition_texticon  Division Attrition: §G-2.0%§!\n"
+ TUR_minority_army_defence_factor_1:0 "£attrition_texticon  Division Attrition: §G-1.0%§!\n"
  TUR_minority_army_defence_factor_down:0 "[TUR_minority_army_defence_factor_down]"
  TUR_minority_army_defence_factor_normal:0 "£defence_texticon  Division Defense: §G+5.0%§!\n"
  TUR_minority_army_defence_factor_4:0 "£defence_texticon  Division Defense: §G+4.0%§!\n"
