--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -580,6 +580,7 @@
  VICTORY_POINTS_4126:0 "Jeonju"
  VICTORY_POINTS_1054:0 "Tongyeong"
  VICTORY_POINTS_4086:0 "Daegu"
+ VICTORY_POINTS_11829:0 "Üsküdar"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
@@ -706,4 +707,5 @@
  LAPPEENRANTA_PROV: "Lappeenranta"
  UUSIKAARLEPYY_PROV: "Uusikaarlepyy"
  RAAHE_PROV: "Raahe"
+ ESCUTAIRE_PROV:0 "Escutaire"
 
