--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1124,6 +1124,7 @@
  PRI_aleksandr_medvedev:0 "Aleksandr Medvedev"
 
  # FINLAND
+ FIN_franz_albert_seyn: "Franz Albert Seyn"
  FIN_kaarlo_juho_stahlberg:0 "Kaarlo Juho Ståhlberg"
  FIN_fredrik_kaarle_i:0 "Fredrik Kaarle I"
  FIN_ernst_linder:0 "Ernst Linder"
@@ -2957,6 +2958,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  RUS_aleksandr_litvinov:0 "Aleksandr Litvinov"
  RUS_leonid_skipetrov:0 "Leonid Skipetrov"
  RUS_nikolai_lokhvitsky:0 "Nikolai Lokhvitsky"
+ RUS_mikhail_stakhovich:0 "Mikhail Stakhovich"
+ RUS_nikolai_nekrasov:0 "Nikolai Nekrasov"
 
  SIB_pyotr_vologodsky:0 "Pyotr Vologodsky"
  SIB_pyotr_derber:0 "Pyotr Derber"
