--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6763,10 +6763,6 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_russia.33.t:0 "Formation of Transcaucasian Democratic Federative Republic"
  ww1_russia.33.d:0 "The Commissariat decided to strengthen the Georgian-Armenian-Azerbaijani union by convoking a general assembly."
  ww1_russia.33.a:0 "A step in the right direction."
- ww1_russia.37.t:0 "Finnish Senate Assumes Control"
- ww1_russia.37.d:0 "Parliament of Finland declared it an independent nation, ending its autonomy within Russia as the Grand Principality of Finland.\nThe people of Finland have by this step taken their fate into their own hands; a step both justified and demanded by present conditions. The people of Finland feel deeply that they cannot fulfill their national and international duty without complete sovereignty. The century-old desire for freedom awaits fulfillment now; Finland's people step forward as a free nation among the other nations in the world. The people of Finland dare to confidently await how other nations in the world recognize that with their full independence and freedom, the people of Finland can do their best in fulfillment of those purposes that will win them a place amongst civilized peoples."
- ww1_russia.37.a:0 "They felt our weakness."
- ww1_russia.37.b:0 "The Finnish People have spoken. (Play as [FIN.GetFlag]Finland)"
  ww1_russia.38.t:0 "Crisis of the State Duma"
  ww1_russia.38.d:0 "The situation in the Duma  has deteriorated sharply. Monarchist parties form a single coalition in the Duma, in response to this, the cadet-constitutionalists and moderate liberals unexpectedly unite with socialists who were forbidden to participate in meetings of the Duma. This political crisis is already considered the largest since 1905. And if the Tsar fails to weaken the democratic coalition, then revolution may shock Russia again."
  ww1_russia.38.a:0 "Nobody expects the Russian Revolution."
@@ -11533,6 +11529,7 @@ FRA_leave_MOR:0 "Leave Morocco"
  rusrevolt.601.a:0 "Ukraine's glory has not perished! (Play as [UKR.GetFlag]Ukraine)"
  rusrevolt.601.b:0 "It has shaken, has stirred the Orthodox quiet Don. (Play as [DON.GetFlag]Don)"
  rusrevolt.601.c:0 "You are Kuban, you are our Motherland! (Play as [KUB.GetFlag]Kuban)"
+ rusrevolt.601.e:0 "The Finnish People have spoken. (Play as [FIN.GetFlag]Finland)"
  rusrevolt.601.d:0 "What about other regions?"
  rusrevolt.602.a:0 "Gortsy stay united! (Play as [MOU.GetFlag]Mountainous Republic)"
  rusrevolt.602.b:0 "Dutov will save Russia! (Play as [ORE.GetFlag]Orenburg)"
