--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -2,6 +2,9 @@
  COUNTRY_autonomy_collaboration_government:0 "$OVERLORDADJ$ $NONIDEOLOGY$" #fallbacks for Collaboration governments
  COUNTRY_autonomy_collaboration_government_DEF:0 "$OVERLORDADJ$ $NONIDEOLOGYDEF$"
  COUNTRY_autonomy_collaboration_government_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
+ COUNTRY_RUS_autonomy_tgwr_governorate_general:0 "Governorate-General of $NONIDEOLOGYDEF$"
+ COUNTRY_RUS_autonomy_tgwr_governorate_general_DEF:0 "Governorate-General of $NONIDEOLOGYDEF$"
+ COUNTRY_RUS_autonomy_tgwr_governorate_general_ADJ:0 "$NONIDEOLOGYADJ$"
  INS_subject:0 "$OVERLORDADJ$ East Indies"
  INS_subject_DEF:0 "the $OVERLORDADJ$ East Indies"
  INS_subject_ADJ:0 "$OVERLORDADJ$ East Indian"
@@ -837,12 +840,10 @@
  FIN_kingdom_democratic_DEF:0 "Finland"
  FIN_kingdom_neutrality:0 "Kingdom of Finland"
  FIN_kingdom_neutrality_DEF:0 "the Kingdom of Finland"
- FIN_RUS_democratic:0 "Senate of Finland"
- FIN_RUS_democratic_DEF:0 "the Senate of Finland"
- FIN_RUS_neutrality:0 "Grand Duchy of Finland"
- FIN_RUS_neutrality_DEF:0 "the Grand Duchy of Finland"
- FIN_RUS_fascism:0 "Governorate of Finland"
- FIN_RUS_fascism_DEF:0 "the Governorate of Finland"
+ FIN_RUS_autonomy_tgwr_real_union:0 "Grand Duchy of Finland"
+ FIN_RUS_autonomy_tgwr_real_union_DEF:0 "the Grand Duchy of Finland"
+ FIN_RUS_autonomy_tgwr_personal_union:0 "Grand Duchy of Finland"
+ FIN_RUS_autonomy_tgwr_personal_union_DEF:0 "the Grand Duchy of Finland"
  EST_RUS_democratic:0 "Autonomous Estonia"
  EST_RUS_democratic_DEF:0 "Autonomous Estonia"
  EST_RUS_neutrality:0 "Governorate of Estland"
