Oskar Potiorek by Artyom

--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -102,4 +102,5 @@
  LOADING_TIP_100: "It is hard to fight against Germans, you can't catch them when they escape. \n- Vojvoda Stepa Stepanović"
  LOADING_TIP_101: "The Republic of China is a tiny baby. They should be cared for and protected against indigestible meals and strong medications prescribed by foreign doctors. \n- Yuan Shikai"
  LOADING_TIP_102: "In the construction of a country, it is not the practical workers but the idealists and planners that are difficult to find. \n- Sun Yat-sen"
+ LOADING_TIP_103: "I was spared at Sarajevo so that I may die avenging it! \n- Oskar Potiorek"
  
