--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -220,6 +220,7 @@
  AUH_anton_liposcak:0 "Anton Lipošćak"
  AUH_karl_von_sturgkh:0 "Karl von Stürgkh"
  AUH_marijan_varesanin:0 "Marijan Varešanin von Vareš"
+ AUH_oskar_potiorek:0 "Oskar Potiorek"
 
  # AUSTRIA
  AUS_franz_koritschoner:0 "Franz Koritschoner"
