--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2749,6 +2749,9 @@ CHL_CREDIT_restriction_idea:0 "Credit Restriction"
 CHL_luxury_tax_idea:0 "Luxury Tax"
 CHL_booming_literacy:0 "Booming Literacy"
 CHL_a_proper_air_force_idea:0 "Fuerza Aerea De Chile"
+CHL_carabineros_de_chile_idea:0 "Carabineros De Chile"
+CHL_autarky_idea:0 "Autarky"
+CHL_convoy_build_efficiency:0 "Merchant Navy"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
