Revert "habsburg-lorraine"
This reverts commit 2a313317e7610bc8c9acbf8b8c914943ab965232.

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -126,7 +126,7 @@
  GER_freikorps_party:0 "Freikorps"
  GER_hindenburg_government:0 "Hindenburgs Präsidentschaft"
  
- AUH_neutrality_party:0 "House of Habsburg-Lorraine"
+ AUH_neutrality_party:0 "House of Habsburg"
  AUH_neutrality_party_long:0 "House of Habsburg-Lorraine"
  AUH_democratic_party:0 "SDAPÖ"
  AUH_democratic_party_long:0 "Sozialdemokratische Arbeiterpartei Österreichs"
