Tunisia Democratic Guy

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1525,6 +1525,8 @@
  RYU_neutrality_party:0 "Shō Clan"
  
  TUN_neutrality_party:0 "Husainid Dynasty"
+ TUN_democratic_party:0 "Young Tunisians"
+ TUN_communism_party:0 "Young Tunisians"
  TUN_colonial_party:0 "Administration Coloniale"
  
  KUR_democratic_party:0 "CTK"
