--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1525,8 +1525,10 @@
  RYU_neutrality_party:0 "Shō Clan"
  
  TUN_neutrality_party:0 "Husainid Dynasty"
- TUN_democratic_party:0 "Young Tunisians"
- TUN_communism_party:0 "Young Tunisians"
+ TUN_democratic_party:0 "Harakat ash-shabāb"
+ TUN_democratic_party_long:0 "Harakat ash-shabāb at-Tūnisi"
+ TUN_communism_party:0 "Harakat ash-shabāb"
+ TUN_communism_party_long:0 "Harakat ash-shabāb at-Tūnisi"
  TUN_colonial_party:0 "Administration Coloniale"
  
  KUR_democratic_party:0 "CTK"
