--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13293,7 +13293,14 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_nejd.35.t: "Failed to Repel [791.owner.GetAdjective] Attack"
  ww1_nejd.35.d: "[791.owner.GetAdjective] forces entered al-Jawf today."
  ww1_nejd.35.a: "Aw."
-
+ ww1_nejd.36.t: "Egyptian Mahmal Incident"
+ ww1_nejd.36.d: "The Egyptian Mahmal arrived in Mecca accompanied by music. As they approached, the Ikhwan, who were unarmed and wearing ihram clothes, heard music for the first time. They considered this to be a form of heresy, and they became angry and rose to prevent the advance of the camel carrying the carrier. an Egyptian officer gave an order to open fire, killing about 25 Ikhwan. Immediately, Abdulaziz, who was close to the place, sent his two sons, Faisal and Saud, to calm the angry Ikhwan and prevent them from killing the Egyptians. The king ordered the Egyptian officer to be detained and prevented from accompanying the pilgrims, in addition preventing the Mahmal from entering Mecca for the first time in 700 years."
+ ww1_nejd.36.a: "They shouldn't have played music"
+ ww1_nejd.36.b: "Allow the Mahmal to Enter"
+ ww1_nejd.37.t: "What Oil Company should the Kingdom chose?"
+ ww1_nejd.37.d: "For the past few years, oil discoveries have been made on the Arabian side of the Gulf, starting in Iraq and then Bahrain. A few British explorers, not affiliated with any professional oil company, searched the Ihsa'a area east of Riyadh but did not find commercially viable quantities of oil. To ensure the survival of the Saudi state, we should call upon oil companies from England and America to help us find oil."
+ ww1_nejd.37.a: "The Americans are experienced"
+ ww1_nejd.37.b: "But the British has more experience"
 
  # AZERBAIJAN
  ww1_azerbaijan.1.t: "Baku Commune"
