--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10371,8 +10371,8 @@ major_nations:0 "(§YMajor Countries§!) :"
 
 FRA_coalition_crash:0 "The §YCartel des Gauches§! Coalition breaks up, causing us to lose our support within the remnants of the §CRadical Party§!, §Ythe Democratic Republican Alliance§!. Our alliance now only consists of parliamentarians from the §RSFIO§! and §Oindependent socialists§!."
  
- #Saudis
-SAU_Convene_Shura: "Convene The Shura Majlis"
+#Saudis
+ SAU_Convene_Shura: "Convene The Shura Majlis"
  SAU_expand_ikhwan_militias: "Expand Ikhwan Militias"
  SAU_conscript_tribes: "Conscript Tribesmen"
  SAU_camelry: "Camelry Units"
@@ -10407,7 +10407,7 @@ SAU_Convene_Shura: "Convene The Shura Majlis"
  SAU_support_katateeb: "Support Katateeb"
  SAU_south_trade: "Oman-Yemen Trade"
  SAU_reform_zakat: "Reform Zakat"
- SAU_develop_qassim: "Develop Qassim"
+ SAU_establish_mabahith: "Establish the Mabahith"
  SAU_Jihad: "State Mandated Jihad"
  SAU_renovate_Riyadh_forts: "Renovate Riyadh Forts"
  SAU_Dynasty_Politics: "Dynasty Politics"
@@ -10462,7 +10462,9 @@ SAU_Convene_Shura: "Convene The Shura Majlis"
  SAU_resettle_tribes: "Resettle Tribes"
  SAU_modernize_male_education: "Modernize Male Education"
  SAU_foreign_office: "Foreign Office"
-
+ EGY_Mahmal_denied_entry: "The Mahmal Denied Entry"
+ EGY_Mahmal_allowed_entry: "The Mahmal Allowed Entry"
+ SAU_Oil_company_chosen: "Our Oil Company has been chosen"
 FRA_ww1_rally_the_piou_piou:0 "Rally the Piou-Piou"
 FRA_ww1_rally_the_piou_piou_desc:0 "The right-wing movements are disunited between the royalists and the republicans. Republican MP Jacques Piou has great influence within the right, enough to unify the leadership of the Conservative group. Take control of the party in the interest of a right-wing coalition aimed at opposing the cartel of the left and a unifying objective which will be able to rally us to other parliamentary groups."
 
