--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -522,6 +522,7 @@
  compania_imberton:0 "Compañía Imberton"
  ferreteria_ferrominera:0 "Ferretería Ferrominera"
  standard_oil_california_SAU:0 "Standard Oil of California"
+ california_arabian_standard_oil: "California-Arabian Standard Oil"
  la_roche:0 "La Roche"
  sandoz:0 "Sandoz"
  sulzer:0 "Sulzer"
@@ -2999,6 +3000,8 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  SAU_bedouin_logstics_idea: "Bedoin Logistics"
  SAU_Horsemanship: "Horsemanship"
  SAU_modern_taxes: "Modern Taxation"
+ SAU_modern_taxes2: "Accounting Division"
+ SAU_Restricted_Advising: "Advisors Restricted"
  SAU_zakat: "Zakat"
  SAU_food_imports: "Food Imports"
  SAU_Sharia_Law: "Sharaia Law"
