--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8282,7 +8282,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_annex_al_jawf:0 "Annex al-Jawf"
  SAU_give_in_TUR:0 "Give in to the [FROM.GetAdjective]s"
  SAU_give_in_TUR_desc:0 "The British are not in a position to intervene and save us from the Ottoman threat of war. Now is the time to contact the Ottomans before it's too late."
-
+ SAU_Egypt_friend: "§nRelations with Egypt will not be severed!§!"
+ SAU_Egypt_enemy: "§eRelations with Egypt will be severed!§!"
+ SAU_Foreign_relations: "Foreign Relations Department"
+ 
  JBS_state_core:0 "Core [FROM.GetName]"
  
  QAT_ask_for_british_protection:0 "Ask for British Protection"
