--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8286,9 +8286,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_Egypt_enemy: "§eRelations with Egypt will be severed!§!"
  SAU_Foreign_relations: "Foreign Relations Department"
  SAU_Egyptian_adv_tt: "§YUnlocks Egyptian Advisors!§!"
- SAU_iraqi_advisors: "§YUnlocks Iraqi Advisors!§!"
- SAU_syrian_advisors: "§YUnlocks Syrian Advisors!§!"
+ SAU_Iraqi_adv_tt: "§YUnlocks Iraqi Advisors!§!"
+ SAU_Syrian_adv_tt: "§YUnlocks Syrian Advisors!§!"
  SAU_Magherb_adv_tt: "§YUnlocks Magherbi Advisors!§!"
+ SAU_magherb_advisors: "Magherbi Advisors"
  
  JBS_state_core:0 "Core [FROM.GetName]"
  
