--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2146,7 +2146,7 @@ CHL_agrarian_education:0 "Agrarian Institutes"
 CHL_agrarian_education_desc:0 ""
 CHL_expansion_of_railways:0 "Expansion Of Railways"
 CHL_expansion_of_railways_desc:0 ""
-CHL_wealth_distribution:0 "Wealth Distribution"
+CHL_wealth_distribution:0 "Income Tax"
 CHL_wealth_distribution_desc:0 ""
 CHL_foreign_investments:0 "Foreign Investments"
 CHL_foreign_investments_desc:0 ""
