--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2751,6 +2751,8 @@ CHL_a_proper_air_force_idea:0 "Fuerza Aerea De Chile"
 CHL_carabineros_de_chile_idea:0 "Carabineros De Chile"
 CHL_autarky_idea:0 "Autarky"
 CHL_convoy_build_efficiency:0 "Merchant Navy"
+CHL_idea_income_tax:0 "Income Tax"
+CHL_nationalized_banks:0 "Nationalized Banks"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
