--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -421,6 +421,7 @@
  british_westinghouse:0 "British Westinghouse"
  eesti_petro:0 "Eesti Petro"
  suomen_gummitehdas_oy:0 "Suomen Gummitehdas Oy"
+ FIN_suojeluskuntain_yliesikunnan_asepaja:0 "Suojeluskuntain Yliesikunnan Asepaja"
  fiskars:0 "Fiskars"
  kuhlmann:0 "Kuhlmann"
  saint_gobain:0 "Saint-Gobain"
