more Saudi Stuff

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8283,13 +8283,17 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_give_in_TUR:0 "Give in to the [FROM.GetAdjective]s"
  SAU_give_in_TUR_desc:0 "The British are not in a position to intervene and save us from the Ottoman threat of war. Now is the time to contact the Ottomans before it's too late."
  SAU_Egypt_friend: "§nRelations with Egypt will not be severed!§!"
- SAU_Egypt_enemy: "§eRelations with Egypt will be severed!§!"
+ SAU_Egypt_enemy: "§vRelations with Egypt will be severed!§!"
  SAU_Foreign_relations: "Foreign Relations Department"
  SAU_Egyptian_adv_tt: "§YUnlocks Egyptian Advisors!§!"
  SAU_Iraqi_adv_tt: "§YUnlocks Iraqi Advisors!§!"
  SAU_Syrian_adv_tt: "§YUnlocks Syrian Advisors!§!"
  SAU_Magherb_adv_tt: "§YUnlocks Magherbi Advisors!§!"
- SAU_magherb_advisors: "Magherbi Advisors"
+ SAU_Saudi_adv_tt: "§YUnlocks Arabian Advisors!§!"
+ SAU_magherb_advisors: "Invite Magherbi Advisors"
+ SAU_Hejazi_opposition: "Hejazi Opposition"
+ Zainal_Company: "Zainal Company"
+ SAU_anglo_persian_oil_company: "Anglo-Persian Oil Company"
  
  JBS_state_core:0 "Core [FROM.GetName]"
  
