--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -437,5 +437,7 @@
  SAU_engineer: "Engineer"
  SAU_telegraph_operator: "Telegraph Operator"
  pan_arabist_doctor: "Pan Arabist Medical Doctor"
+ progressive_royal: "Progressive Royal"
+ Whabbist_demagogue: "Whabbist Demagogue"
  melanchonic_king:0 "Melanchonic King"
  
